# wircle

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/wircle/: wirclemodule.c
