[metadata]
name = wircle
version = v0.1.0
author = Hamish Knox
author_email = hrjkknox@gmail.com
description = A library for getting points in a wavy circle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hrjkknox/wircle
license = MIT
license_file = LICENSE
project_urls =
	Bug Tracker = https://github.com/hrjkknox/wircle/issues
classifiers = 
	License :: OSI Approved :: MIT License
